schema plugin URI catalog / Fix when path contains space on windows and cleaning.